service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: NodePort
  ports:
    - targetPort: 8080 #app
      port: 8080 #service port connecting to app
      nodePort: 30008 #port of the node
  selector:
    app: booking
